--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -54,7 +54,7 @@
       content: "";
       width: 100%;
       height: 4px;
-      background-color: #2196f3;
+      background-color: var(--accent-color);
       border-radius: 2px;
       bottom: -32px;
     }
