--- a/sass/main.scss
+++ b/sass/main.scss
@@ -18,7 +18,7 @@
 @import "./layout/header";
 @import "./layout/hero";
 @import "./layout/features";
-@import "./layout/ourjob";
+// @import "./layout/ourjob";
 @import "./layout/ourteam";
 @import "./layout/clients";
 @import "./layout/footer";
